feat: coloring of calendar trips